--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.16.3",
+    "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   }
 }
