--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    ">1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.8.1",
     "json-server": "^0.16.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
